package com.fachada.cagepa.fachadacagepa.config;

public interface TessDataPathAdapter {

    String getTessDataPath();

    String getOsType();
}


